ass_1/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'auto'", "'array'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'void'", "'while'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'::'", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'", "'.'", "','", "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "IntegerLiteral", "BooleanLiteral", "FloatLiteral", 
                      "StringLiteral", "Auto", "Array", "Break", "Boolean", 
                      "Do", "Else", "False_", "Float", "For", "Function", 
                      "If", "Integer", "Return", "String", "True_", "Void", 
                      "While", "Out", "Continue", "Of", "Inherit", "Plus", 
                      "Minus", "Star", "Div", "Mod", "Not", "AndAnd", "OrOr", 
                      "Equal", "NotEqual", "Less", "LessEqual", "Greater", 
                      "GreaterEqual", "Doublecolon", "LeftParen", "RightParen", 
                      "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
                      "Dot", "Comma", "Semicolon", "Colon", "Assign", "Identifier", 
                      "WhiteSpace", "BlockComment", "LineComment", "ILLEGAL_ESCAPE", 
                      "UNCLOSED_STRING", "ERROR_CHAR", "ERROR_INTLIT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_functionDeclaration = 2
    RULE_functionPrototype = 3
    RULE_parameterList = 4
    RULE_parameterListPrime = 5
    RULE_parameterDeclarion = 6
    RULE_variableDeclaration = 7
    RULE_varDeclShortForm = 8
    RULE_varDeclFullForm = 9
    RULE_expression = 10
    RULE_expressionList = 11
    RULE_indexedExpression = 12
    RULE_functionCall = 13
    RULE_operand = 14
    RULE_indexedOperator = 15
    RULE_booleanOperator = 16
    RULE_relationalOperator = 17
    RULE_multiplyOperator = 18
    RULE_addingOperator = 19
    RULE_stringOperator = 20
    RULE_arrayDeclaration = 21
    RULE_indexedArrayLiteral = 22
    RULE_allType = 23
    RULE_nonVoidType = 24
    RULE_atomicType = 25
    RULE_dimensionArray = 26
    RULE_dimensionsArrayPrime = 27
    RULE_literal = 28
    RULE_statement = 29
    RULE_assignStatement = 30
    RULE_conditionStatement = 31
    RULE_matchStatement = 32
    RULE_unmatchStatement = 33
    RULE_forStatement = 34
    RULE_scalarVariable = 35
    RULE_whileStatement = 36
    RULE_do_whileStatement = 37
    RULE_continueStatement = 38
    RULE_returnStatement = 39
    RULE_breakStatement = 40
    RULE_blockStatement = 41
    RULE_blockStatementPrime = 42
    RULE_callStatement = 43
    RULE_identifierList = 44

    ruleNames =  [ "program", "declaration", "functionDeclaration", "functionPrototype", 
                   "parameterList", "parameterListPrime", "parameterDeclarion", 
                   "variableDeclaration", "varDeclShortForm", "varDeclFullForm", 
                   "expression", "expressionList", "indexedExpression", 
                   "functionCall", "operand", "indexedOperator", "booleanOperator", 
                   "relationalOperator", "multiplyOperator", "addingOperator", 
                   "stringOperator", "arrayDeclaration", "indexedArrayLiteral", 
                   "allType", "nonVoidType", "atomicType", "dimensionArray", 
                   "dimensionsArrayPrime", "literal", "statement", "assignStatement", 
                   "conditionStatement", "matchStatement", "unmatchStatement", 
                   "forStatement", "scalarVariable", "whileStatement", "do_whileStatement", 
                   "continueStatement", "returnStatement", "breakStatement", 
                   "blockStatement", "blockStatementPrime", "callStatement", 
                   "identifierList" ]

    EOF = Token.EOF
    IntegerLiteral=1
    BooleanLiteral=2
    FloatLiteral=3
    StringLiteral=4
    Auto=5
    Array=6
    Break=7
    Boolean=8
    Do=9
    Else=10
    False_=11
    Float=12
    For=13
    Function=14
    If=15
    Integer=16
    Return=17
    String=18
    True_=19
    Void=20
    While=21
    Out=22
    Continue=23
    Of=24
    Inherit=25
    Plus=26
    Minus=27
    Star=28
    Div=29
    Mod=30
    Not=31
    AndAnd=32
    OrOr=33
    Equal=34
    NotEqual=35
    Less=36
    LessEqual=37
    Greater=38
    GreaterEqual=39
    Doublecolon=40
    LeftParen=41
    RightParen=42
    LeftBracket=43
    RightBracket=44
    LeftBrace=45
    RightBrace=46
    Dot=47
    Comma=48
    Semicolon=49
    Colon=50
    Assign=51
    Identifier=52
    WhiteSpace=53
    BlockComment=54
    LineComment=55
    ILLEGAL_ESCAPE=56
    UNCLOSED_STRING=57
    ERROR_CHAR=58
    ERROR_INTLIT=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclarationContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90
                self.declaration()
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.Identifier):
                    break

            self.state = 95
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.VariableDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.FunctionDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.functionDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionPrototype(self):
            return self.getTypedRuleContext(MT22Parser.FunctionPrototypeContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(MT22Parser.BlockStatementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_functionDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = MT22Parser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.functionPrototype()
            self.state = 102
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionPrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Identifier)
            else:
                return self.getToken(MT22Parser.Identifier, i)

        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def Function(self):
            return self.getToken(MT22Parser.Function, 0)

        def allType(self):
            return self.getTypedRuleContext(MT22Parser.AllTypeContext,0)


        def LeftParen(self):
            return self.getToken(MT22Parser.LeftParen, 0)

        def parameterList(self):
            return self.getTypedRuleContext(MT22Parser.ParameterListContext,0)


        def RightParen(self):
            return self.getToken(MT22Parser.RightParen, 0)

        def Inherit(self):
            return self.getToken(MT22Parser.Inherit, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_functionPrototype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionPrototype" ):
                return visitor.visitFunctionPrototype(self)
            else:
                return visitor.visitChildren(self)




    def functionPrototype(self):

        localctx = MT22Parser.FunctionPrototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionPrototype)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(MT22Parser.Identifier)
                self.state = 105
                self.match(MT22Parser.Colon)
                self.state = 106
                self.match(MT22Parser.Function)
                self.state = 107
                self.allType()
                self.state = 108
                self.match(MT22Parser.LeftParen)
                self.state = 109
                self.parameterList()
                self.state = 110
                self.match(MT22Parser.RightParen)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MT22Parser.Identifier)
                self.state = 113
                self.match(MT22Parser.Colon)
                self.state = 114
                self.match(MT22Parser.Function)
                self.state = 115
                self.allType()
                self.state = 116
                self.match(MT22Parser.LeftParen)
                self.state = 117
                self.parameterList()
                self.state = 118
                self.match(MT22Parser.RightParen)
                self.state = 119
                self.match(MT22Parser.Inherit)
                self.state = 120
                self.match(MT22Parser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterListPrime(self):
            return self.getTypedRuleContext(MT22Parser.ParameterListPrimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = MT22Parser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.Out, MT22Parser.Inherit, MT22Parser.Identifier]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.parameterListPrime()
                pass
            elif token in [MT22Parser.RightParen]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterDeclarion(self):
            return self.getTypedRuleContext(MT22Parser.ParameterDeclarionContext,0)


        def Comma(self):
            return self.getToken(MT22Parser.Comma, 0)

        def parameterListPrime(self):
            return self.getTypedRuleContext(MT22Parser.ParameterListPrimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameterListPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterListPrime" ):
                return visitor.visitParameterListPrime(self)
            else:
                return visitor.visitChildren(self)




    def parameterListPrime(self):

        localctx = MT22Parser.ParameterListPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterListPrime)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.parameterDeclarion()
                self.state = 129
                self.match(MT22Parser.Comma)
                self.state = 130
                self.parameterListPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.parameterDeclarion()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDeclarionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def nonVoidType(self):
            return self.getTypedRuleContext(MT22Parser.NonVoidTypeContext,0)


        def Out(self):
            return self.getToken(MT22Parser.Out, 0)

        def Inherit(self):
            return self.getToken(MT22Parser.Inherit, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameterDeclarion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclarion" ):
                return visitor.visitParameterDeclarion(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclarion(self):

        localctx = MT22Parser.ParameterDeclarionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameterDeclarion)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(MT22Parser.Identifier)
                self.state = 136
                self.match(MT22Parser.Colon)
                self.state = 137
                self.nonVoidType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.match(MT22Parser.Out)
                self.state = 139
                self.match(MT22Parser.Identifier)
                self.state = 140
                self.match(MT22Parser.Colon)
                self.state = 141
                self.nonVoidType()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.match(MT22Parser.Inherit)
                self.state = 143
                self.match(MT22Parser.Identifier)
                self.state = 144
                self.match(MT22Parser.Colon)
                self.state = 145
                self.nonVoidType()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.match(MT22Parser.Inherit)
                self.state = 147
                self.match(MT22Parser.Out)
                self.state = 148
                self.match(MT22Parser.Identifier)
                self.state = 149
                self.match(MT22Parser.Colon)
                self.state = 150
                self.nonVoidType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclShortForm(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclShortFormContext,0)


        def Semicolon(self):
            return self.getToken(MT22Parser.Semicolon, 0)

        def varDeclFullForm(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclFullFormContext,0)


        def arrayDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.ArrayDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variableDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = MT22Parser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableDeclaration)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.varDeclShortForm()
                self.state = 154
                self.match(MT22Parser.Semicolon)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.varDeclFullForm()
                self.state = 157
                self.match(MT22Parser.Semicolon)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 159
                self.arrayDeclaration()
                self.state = 160
                self.match(MT22Parser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclShortFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def nonVoidType(self):
            return self.getTypedRuleContext(MT22Parser.NonVoidTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varDeclShortForm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclShortForm" ):
                return visitor.visitVarDeclShortForm(self)
            else:
                return visitor.visitChildren(self)




    def varDeclShortForm(self):

        localctx = MT22Parser.VarDeclShortFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDeclShortForm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.identifierList()
            self.state = 165
            self.match(MT22Parser.Colon)
            self.state = 166
            self.nonVoidType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclFullFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.Comma)
            else:
                return self.getToken(MT22Parser.Comma, i)

        def varDeclFullForm(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclFullFormContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def Colon(self):
            return self.getToken(MT22Parser.Colon, 0)

        def nonVoidType(self):
            return self.getTypedRuleContext(MT22Parser.NonVoidTypeContext,0)


        def Assign(self):
            return self.getToken(MT22Parser.Assign, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varDeclFullForm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclFullForm" ):
                return visitor.visitVarDeclFullForm(self)
            else:
                return visitor.visitChildren(self)




    def varDeclFullForm(self):

        localctx = MT22Parser.VarDeclFullFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varDeclFullForm)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(MT22Parser.Identifier)
                self.state = 169
                self.match(MT22Parser.Comma)
                self.state = 170
                self.varDeclFullForm()
                self.state = 171
                self.match(MT22Parser.Comma)
                self.state = 172
                self.expression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(MT22Parser.Identifier)
                self.state = 175
                self.match(MT22Parser.Colon)
                self.state = 176
                self.nonVoidType()
                self.state = 177
                self.match(MT22Parser.Assign)
                self.state = 178
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Minus(self):
            return self.getToken(MT22Parser.Minus, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ExpressionContext,i)


        def Not(self):
            return self.getToken(MT22Parser.Not, 0)

        def operand(self):
            return self.getTypedRuleContext(MT22Parser.OperandContext,0)


        def multiplyOperator(self):
            return self.getTypedRuleContext(MT22Parser.MultiplyOperatorContext,0)


        def addingOperator(self):
            return self.getTypedRuleContext(MT22Parser.AddingOperatorContext,0)


        def booleanOperator(self):
            return self.getTypedRuleContext(MT22Parser.BooleanOperatorContext,0)


        def relationalOperator(self):
            return self.getTypedRuleContext(MT22Parser.RelationalOperatorContext,0)


        def stringOperator(self):
            return self.getTypedRuleContext(MT22Parser.StringOperatorContext,0)


        def indexedOperator(self):
            return self.getTypedRuleContext(MT22Parser.IndexedOperatorContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.Minus]:
                self.state = 183
                self.match(MT22Parser.Minus)
                self.state = 184
                self.expression(8)
                pass
            elif token in [MT22Parser.Not]:
                self.state = 185
                self.match(MT22Parser.Not)
                self.state = 186
                self.expression(7)
                pass
            elif token in [MT22Parser.IntegerLiteral, MT22Parser.BooleanLiteral, MT22Parser.FloatLiteral, MT22Parser.StringLiteral, MT22Parser.LeftBrace, MT22Parser.Identifier]:
                self.state = 187
                self.operand()
                pass
            else:
                raise NoViableAltException(self)
